# graphql-schema-compatibility

./: pyproject.toml
graphql_schema_compatibility/parser/: parser.py
tests/resources/simple-schema/: schema-2.graphql
