[tool.poetry]
name = "graphql-schema-compatibility"
version = "0.1.0"
description = ""
authors = ["Iestyn"]
readme = "README.md"
packages = [{include = "graphql_schema_compatibility"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
